# my-first-crew

./: .gitignore  README.md  requirements.txt  simple_travel_planning_crew.py  youtube_crew.py
my_first_crews/: .env  simple_travel_planning_crew.py  youtube_crew.py
technical_writing_crew/: README.md  pyproject.toml
technical_writing_crew/src/technical_writing_crew/: crew.py  main.py
technical_writing_crew/src/technical_writing_crew/config/: agents.yaml  tasks.yaml
