[project]
name = "technical_writing_crew"
version = "0.1.0"
description = "technical_writing_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[tools]==1.8.1",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "fastapi-sso>=0.17.0",
    "litellm>=1.75.3",
]

[project.scripts]
technical_writing_crew = "technical_writing_crew.main:run"
run_crew = "technical_writing_crew.main:run"
train = "technical_writing_crew.main:train"
replay = "technical_writing_crew.main:replay"
test = "technical_writing_crew.main:test"
run_with_trigger = "technical_writing_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
